# secure-auth-data-extractor

./: .dockerignore  .gitignore  Benny API.yaml  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.env  docker-compose.yml  frontend.env  makefile  manage.py  package-lock.json  pyproject.toml
auth_data_extractor/: admin.py  apps.py  models.py  task.py  urls.py  views.py
auth_data_extractor/authentication/factories/: authenticator_factory.py
auth_data_extractor/authentication/interfaces/: authenticator_interface.py
auth_data_extractor/authentication/providers/: google_authenticator.py
auth_data_extractor/authentication/serializers/: google_auth_serializer.py
auth_data_extractor/authentication/views/: authenticate_provider.py
auth_data_extractor/data_extractor/: base_extractor.py  extractor_validator.py  imput_extractor.py
auth_data_extractor/data_extractor/serializers/: data_extractor_serializer.py
auth_data_extractor/data_extractor/views/: data_extractor_views.py
auth_data_extractor/migrations/: 0001_initial.py
auth_data_extractor/tests/: test_extractor.py  test_factory.py
benny/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/: apiServices.ts
frontend/app/components/: GoogleLogin.tsx  TextInputComponent.tsx
nginx/: web.conf
scripts/: create_certs.sh  init_web.sh
